# mbajk-ml-web-service

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  Makefile  README.md  data.dvc  docker-compose.yml  download_datasets.sh  dvc.yaml  prediction_req_body.json  predictions.sqlite  pyproject.toml  request_body_example.json
.dvc/: config
.github/workflows/: client-ci.yml  cron-jobs.yml  data-pipline.yml  fetch.yml  main.yml  metrics.yml  process.yml  service-ci.yml  test.yml  training-pipline.yml
data/: processed.dvc  raw.dvc
data/processed/: .gitignore  current_data.csv.dvc  mbajk_DVORANA TABOR.csv  mbajk_EUROPARK - POBREŠKA C..csv  mbajk_GOSPOSVETSKA C. - III. GIMNAZIJA.csv  mbajk_GOSPOSVETSKA C. - TURNERJEVA UL..csv  mbajk_GOSPOSVETSKA C. - VRBANSKA C..csv  mbajk_JHMB – DVOETAŽNI MOST.csv  mbajk_KOROŠKA C. - KOROŠKI VETER.csv  mbajk_LIDL - KOROŠKA C..csv  mbajk_LIDL - TITOVA C..csv  mbajk_LJUBLJANSKA UL. - FOCHEVA.csv  mbajk_LJUBLJANSKA UL. - II. GIMNAZIJA.csv  mbajk_MLADINSKA UL. - TRUBARJEVA UL..csv  mbajk_MLINSKA UL . - AVTOBUSNA POSTAJA.csv  mbajk_NA POLJANAH - HEROJA ŠERCERJA.csv  mbajk_NICEHASH - C. PROLETARSKIH BRIGAD.csv  mbajk_NKBM - TRG LEONA ŠTUKLJA.csv  mbajk_PARTIZANSKA C. - CANKARJEVA UL..csv  mbajk_PARTIZANSKA C. - TIC.csv  mbajk_PARTIZANSKA C. - ŽELEZNIŠKA POSTAJA.csv  mbajk_POŠTA - SLOMŠKOV TRG.csv  mbajk_RAZLAGOVA UL. - OBČINA.csv  mbajk_SPAR - TRŽNICA TABOR.csv  mbajk_STROSSMAYERJEVA UL. - TRŽNICA.csv  mbajk_TELEMACH - GLAVNI TRG - STARI PERON.csv  mbajk_ULICA MOŠE PIJADA - UKC.csv  mbajk_UM FGPA - LENT - SODNI STOLP.csv  mbajk_VZAJEMNA, VARUH ZDRAVJA - BETNAVSKA C..csv  mbajk_dataset_DVORANA TABOR.csv  mbajk_dataset_EUROPARK - POBREŠKA C..csv  mbajk_dataset_GORKEGA UL. - OŠ FRANCETA PREŠERNA.csv  mbajk_dataset_GOSPOSVETSKA C. - III. GIMNAZIJA.csv  mbajk_dataset_GOSPOSVETSKA C. - TURNERJEVA UL..csv  mbajk_dataset_GOSPOSVETSKA C. - VRBANSKA C..csv  mbajk_dataset_JHMB – DVOETAŽNI MOST.csv  mbajk_dataset_KOROŠKA C. - KOROŠKI VETER.csv  mbajk_dataset_LIDL - KOROŠKA C..csv  mbajk_dataset_LIDL - TITOVA C..csv  mbajk_dataset_LJUBLJANSKA UL. - FOCHEVA.csv  (+81 more)
data/raw/: .gitignore  mbajk_dataset.csv.dvc  mbajk_dataset_DVORANA TABOR.csv  mbajk_dataset_EUROPARK - POBREŠKA C..csv  mbajk_dataset_GORKEGA UL. - OŠ FRANCETA PREŠERNA.csv  mbajk_dataset_GOSPOSVETSKA C. - III. GIMNAZIJA.csv  mbajk_dataset_GOSPOSVETSKA C. - TURNERJEVA UL..csv  mbajk_dataset_GOSPOSVETSKA C. - VRBANSKA C..csv  mbajk_dataset_JHMB – DVOETAŽNI MOST.csv  mbajk_dataset_KOROŠKA C. - KOROŠKI VETER.csv  mbajk_dataset_LIDL - KOROŠKA C..csv  mbajk_dataset_LIDL - TITOVA C..csv  mbajk_dataset_LJUBLJANSKA UL. - FOCHEVA.csv  mbajk_dataset_LJUBLJANSKA UL. - II. GIMNAZIJA.csv  mbajk_dataset_MLADINSKA UL. - TRUBARJEVA UL..csv  mbajk_dataset_MLINSKA UL . - AVTOBUSNA POSTAJA.csv  mbajk_dataset_NA POLJANAH - HEROJA ŠERCERJA.csv  mbajk_dataset_NICEHASH - C. PROLETARSKIH BRIGAD.csv  mbajk_dataset_NKBM - TRG LEONA ŠTUKLJA.csv  mbajk_dataset_PARTIZANSKA C. - CANKARJEVA UL..csv  mbajk_dataset_PARTIZANSKA C. - TIC.csv  mbajk_dataset_PARTIZANSKA C. - ŽELEZNIŠKA POSTAJA.csv  mbajk_dataset_POŠTA - SLOMŠKOV TRG.csv  mbajk_dataset_RAZLAGOVA UL. - OBČINA.csv  mbajk_dataset_SPAR - TRŽNICA TABOR.csv  mbajk_dataset_STROSSMAYERJEVA UL. - TRŽNICA.csv  mbajk_dataset_TELEMACH - GLAVNI TRG - STARI PERON.csv  mbajk_dataset_ULICA MOŠE PIJADA - UKC.csv  mbajk_dataset_UM FGPA - LENT - SODNI STOLP.csv  mbajk_dataset_VZAJEMNA, VARUH ZDRAVJA - BETNAVSKA C..csv  mbajk_stations.csv  mbajk_stations.csv.dvc  weather.csv  weather.csv.dvc
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  mbajk_suite.json
models/: mbajk_GRU_model.keras  mbajk_GRU_mse_2.29.keras
models/station_1/: model.keras
models/station_10/: model.keras
models/station_11/: model.keras
models/station_12/: model.keras
models/station_13/: model.keras
models/station_14/: model.keras
models/station_15/: model.keras
models/station_16/: model.keras
models/station_17/: model.keras
models/station_18/: model.keras
models/station_19/: model.keras
models/station_2/: model.keras
models/station_20/: model.keras
models/station_21/: model.keras
models/station_22/: model.keras
models/station_23/: model.keras
models/station_24/: model.keras
models/station_25/: model.keras
models/station_26/: model.keras
models/station_27/: model.keras
models/station_28/: model.keras
notebooks/: concat_dataframes.ipynb  data_drift.ipynb  mbajk_dataset_preprocessing.ipynb  mbajk_preprocessing_pipeline.ipynb  mbajk_train.ipynb  merge_data.ipynb  stability_tests.ipynb
reports/: data_drift.html  metrics.txt  stability_tests.html  train_metrics.txt
src/: config.py
tests/: app_test.py
(+274 files in other folders)
