[tool.poetry]
name = "mbajk-ml-web-service"
version = "0.1.0"
description = ""
authors = ["perkzen <perko.domen@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
serve = "uvicorn src.serve.main:app --reload"
fetch_data = "python3 -m src.data.scripts.fetch_bike_stations && python3 -m src.data.scripts.fetch_weather"
fetch_bike_data = "python3 -m src.data.scripts.fetch_bike_stations"
fetch_weather_data = "python3 -m src.data.scripts.fetch_weather"
process = "python3 -m src.data.scripts.process_data"
train = "python3 -m src.models.scripts.train_model"
predict = "python3 -m src.models.scripts.predict_model"
test = "pytest"
test_job= "pytest src/tests/api_test.py"
lint = "ruff check ."

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
tensorflow = "^2.15.0.post1"
scipy = "^1.12.0"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
requests = "^2.31.0"
joblib = "^1.3.2"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
dagshub = "^0.3.21"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
poethepoet = "^0.25.0"
pytest = "^8.1.1"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
