[tool.poetry]
name = "mbajk-ml-web-service"
version = "0.1.0"
description = ""
authors = ["perkzen <perko.domen@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
serve = "uvicorn src.serve.main:app --reload"
fetch_bike_data = "python3 -m src.data.scripts.fetch_bike_stations"
fetch_weather_data = "python3 -m src.data.scripts.fetch_weather"
split_data = "python3 -m src.data.scripts.split_data"
process = "python3 -m src.data.scripts.process_data"
train = "python3 -m src.models.scripts.train_model"
predict = "python3 -m src.models.scripts.predict_model"
download_models = "python3 -m src.models.scripts.download_models"
ks_test = "python3 -m src.validation.ks"
validate = "python3 -m src.validation.run_checkpoint"
data_drift = "python3 -m src.validation.data_drift"
stability_tests = "python3 -m src.validation.stability_tests"
validate_predictions = "python3 -m src.validation.validate_predictions"
test = "pytest"
test_job = "pytest src/tests/api_availability_test.py"
lint = "ruff check ."

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
tensorflow = "^2.15.0"
scipy = "^1.12.0"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
requests = "^2.31.0"
joblib = "^1.3.2"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
great-expectations = "^0.18.12"
evidently = "^0.4.19"
mlflow = "^2.11.3"
dagshub = "^0.3.24"
sqlalchemy = "^2.0.29"
tf2onnx = "^1.16.1"
onnxruntime = "^1.17.3"
tf-keras = "^2.16.0"
tensorflow-model-optimization = "^0.8.0"
cachetools = "^5.3.3"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
poethepoet = "^0.25.0"
pytest = "^8.1.1"
ruff = "^0.3.2"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
